Updated the homepage with UI for the list and quizes. Data is hardcoded and still has to be retrieved from the server

--- a/flutter/lib/l10n/app_en.arb
+++ b/flutter/lib/l10n/app_en.arb
@@ -3,6 +3,9 @@
     "@sign_app": {
         "description": "Name of the application"
     },
+
+    "pickUpWhereYouLeftOf":"Pick up where you left of:",
+    "lists": "Lists",
     "search": "Search",
     "searchByWord": "Search by word",
     "searchByGesture": "Search by property",
