Added menu to quiz list to edit and delete list, implementation still has to be made

--- a/flutter/lib/l10n/app_en.arb
+++ b/flutter/lib/l10n/app_en.arb
@@ -18,6 +18,8 @@
     "goBackHome": "Go back home",
     "yes": "Yes",
     "no": "No",
+    "edit": "Edit",
+    "delete": "Delete",
     "quizCompletedTitle": "Quiz completed",
     "quizCompletedBody":"Well done you completed the whole list!",
     "quizRepeatWrongAnswerTitle": "Learn from your mistakes",
