First part of CRUD the quiz lists

--- a/flutter/lib/l10n/app_en.arb
+++ b/flutter/lib/l10n/app_en.arb
@@ -20,6 +20,7 @@
     "no": "No",
     "edit": "Edit",
     "delete": "Delete",
+    "createList": "Create a list",
     "quizCompletedTitle": "Quiz completed",
     "quizCompletedBody":"Well done you completed the whole list!",
     "quizRepeatWrongAnswerTitle": "Learn from your mistakes",
