User can now create a list

--- a/flutter/lib/l10n/app_en.arb
+++ b/flutter/lib/l10n/app_en.arb
@@ -20,7 +20,8 @@
     "no": "No",
     "edit": "Edit",
     "delete": "Delete",
-    "createList": "Create a list",
+    "createQuiz": "Create a quiz",
+    "enterAQuizName": "Enter a quiz name",
     "quizCompletedTitle": "Quiz completed",
     "quizCompletedBody":"Well done you completed the whole list!",
     "quizRepeatWrongAnswerTitle": "Learn from your mistakes",
