--- a/flutter/lib/l10n/app_nl.arb
+++ b/flutter/lib/l10n/app_nl.arb
@@ -1,3 +1,46 @@
 {
-    "search": "Zoeken"
+    "sign_app": "Gebaar App",
+    "@sign_app": {
+    "description": "Naam van de applicatie"
+    },
+    "pickUpWhereYouLeftOf":"Pak op waar je gebleven bent:",
+    "lists": "Lijsten",
+    "search": "Zoeken",
+    "searchByWord": "Zoeken op woord",
+    "searchByGesture": "Zoeken op eigenschap",
+    "back": "Terug",
+    "searchFor": "Zoeken naar: ",
+    "propertyGroup": "Eigenschap: ",
+    "quizOf": "Quiz van: ",
+    "checkAnswer": "Controleer antwoord",
+    "nextSign": "Volgend gebaar",
+    "goBackHome": "Ga terug naar startpagina",
+    "yes": "Ja",
+    "no": "Nee",
+    "edit": "Bewerken",
+    "delete": "Verwijderen",
+    "createQuiz": "Maak een quiz",
+    "enterAQuizName": "Voer een quiznaam in",
+    "quizCompletedTitle": "Quiz voltooid",
+    "quizCompletedBody":"Goed gedaan, je hebt de hele lijst voltooid!",
+    "quizRepeatWrongAnswerTitle": "Leer van je fouten",
+    "quizRepeatWrongAnswerBody":"Het lijkt erop dat je een paar fouten hebt gemaakt.\nWil je ze nogmaals doornemen?",
+    "email":"E-mail",
+    "username":"Gebruikersnaam",
+    "password":"Wachtwoord",
+    "repeatPassword":"Herhaal wachtwoord",
+    "login": "Inloggen",
+    "register": "Registreren",
+    "createAnAccount": "Maak een account aan",
+    "emptyEmail": "Voer een e-mailadres in",
+    "emptyUsername": "Voer een gebruikersnaam in",
+    "emptyPassword": "Voer een wachtwoord in",
+    "emptyRepeatPassword": "Herhaal uw wachtwoord",
+    "invalidEmail": "Voer een geldig e-mailadres in",
+    "invalidPassword": "Wachtwoord moet minimaal 6 tekens lang zijn",
+    "passwordDoNotMatch": "De wachtwoorden komen niet overeen",
+    "addSign": "Voeg gebaar toe",
+    "loginHomepageText": "Het lijkt erop dat je niet bent ingelogd.\nLog alsjeblieft in om je persoonlijke lijst met gebaren te maken en van te leren",
+    "emptyRecentQuizText": "Maak hieronder een lijst aan en begin met leren",
+    "emptyQuiz":"De quiz moet minimaal één gebaar bevatten"
 }
