Updated dutch translations

--- a/flutter/lib/l10n/app_nl.arb
+++ b/flutter/lib/l10n/app_nl.arb
@@ -3,28 +3,28 @@
     "@sign_app": {
     "description": "Naam van de applicatie"
     },
-    "pickUpWhereYouLeftOf":"Pak op waar je gebleven bent:",
+    "pickUpWhereYouLeftOf":"Ga verder waar je was gebleven:",
     "lists": "Lijsten",
     "search": "Zoeken",
-    "searchByWord": "Zoeken op woord",
-    "searchByGesture": "Zoeken op eigenschap",
+    "searchByWord": "Zoek op woord",
+    "searchByGesture": "Zoek op eigenschap",
     "back": "Terug",
-    "searchFor": "Zoeken naar: ",
+    "searchFor": "Zoeken op: ",
     "propertyGroup": "Eigenschap: ",
     "quizOf": "Quiz van: ",
-    "checkAnswer": "Controleer antwoord",
+    "checkAnswer": "Check je antworod",
     "nextSign": "Volgend gebaar",
-    "goBackHome": "Ga terug naar startpagina",
+    "goBackHome": "Terug naar begin",
     "yes": "Ja",
     "no": "Nee",
-    "edit": "Bewerken",
-    "delete": "Verwijderen",
+    "edit": "Bewerk",
+    "delete": "Verwijder",
     "createQuiz": "Maak een quiz",
-    "enterAQuizName": "Voer een quiznaam in",
-    "quizCompletedTitle": "Quiz voltooid",
-    "quizCompletedBody":"Goed gedaan, je hebt de hele lijst voltooid!",
+    "enterAQuizName": "Voer quiznaam in",
+    "quizCompletedTitle": "Quiz klaar",
+    "quizCompletedBody":"Goed gedaan, je hebt de hele lijst af!",
     "quizRepeatWrongAnswerTitle": "Leer van je fouten",
-    "quizRepeatWrongAnswerBody":"Het lijkt erop dat je een paar fouten hebt gemaakt.\nWil je ze nogmaals doornemen?",
+    "quizRepeatWrongAnswerBody":"Je hebt een paar foutjes gemaakt.\nWil je die nog eens zien?",
     "email":"E-mail",
     "username":"Gebruikersnaam",
     "password":"Wachtwoord",
