Renamed app to NGT Signbank

--- a/flutter/lib/l10n/app_en.arb
+++ b/flutter/lib/l10n/app_en.arb
@@ -1,5 +1,5 @@
 {
-    "sign_app": "Sign App",
+    "sign_app": "NGT Signbank",
     "@sign_app": {
         "description": "Name of the application"
     },
