--- a/flutter/lib/l10n/app_nl.arb
+++ b/flutter/lib/l10n/app_nl.arb
@@ -1,5 +1,5 @@
 {
-    "sign_app": "Gebaar App",
+    "sign_app": "NGT Signbank",
     "@sign_app": {
     "description": "Naam van de applicatie"
     },
