--- a/flutter/lib/l10n/app_nl.arb
+++ b/flutter/lib/l10n/app_nl.arb
@@ -42,5 +42,6 @@
     "addSign": "Voeg gebaar toe",
     "loginHomepageText": "Het lijkt erop dat je niet bent ingelogd.\nLog alsjeblieft in om je persoonlijke lijst met gebaren te maken en van te leren",
     "emptyRecentQuizText": "Maak hieronder een lijst aan en begin met leren",
-    "emptyQuiz":"De quiz moet minimaal één gebaar bevatten"
+    "emptyQuiz":"De quiz moet minimaal één gebaar bevatten",
+    "somethingWentWrong": "Oeps er is iets verkeerd gegaan, probeer later nog een keer."
 }
