--- a/flutter/lib/l10n/app_en.arb
+++ b/flutter/lib/l10n/app_en.arb
@@ -44,5 +44,6 @@
     "loginHomepageText": "It seems that you are not logged in.\nPlease login to make and learn from you personal list of signs",
     "emptyRecentQuizText": "Create a list below and start learning",
     "emptyQuiz":"The quiz must contain at least on sign",
-    "somethingWentWrong": "Oops something went wrong, please try again later."
+    "somethingWentWrong": "Oops something went wrong, please try again later.",
+    "forgotPassword": "Forgot password"
 }
